Prevent double border in complex field layout

--- a/assets/postcss/modules/_fields.complex.css
+++ b/assets/postcss/modules/_fields.complex.css
@@ -38,7 +38,7 @@
 
 .carbon-groups-holder .carbon-group-actions .carbon-btn-remove:hover { color: $color-border-darkgrey; }
 
-.carbon-groups-holder .fields-container { border-width: 0 1px 0 1px; border-style: solid; border-color: $color-border; }
+.carbon-groups-holder .fields-container { margin-top: -1px; border-width: 0 0 0 1px; border-style: solid; border-color: $color-border; }
 
 
 /*  Drag Handle  */
@@ -56,8 +56,6 @@
 .group-tabs-nav-holder > .carbon-actions .button { width: 36px; height: 36px; padding: 0; line-height: 28px; background: $color-grey-bg; border: 1px solid $color-border; border-radius: 0; box-shadow: none; text-align: center; font-size: 24px; font-weight: 600; color: $color-label; }
 .group-tabs-nav-holder > .carbon-actions .button:active { transform: none; }
 .group-tabs-nav-holder > .carbon-actions .button:hover { color: $color-blue-font; }
-
-.group-tabs-nav-holder ~ .carbon-groups-holder { border-top: 1px solid $color-border; }
 
 .group-tabs-nav-holder ~ .carbon-groups-holder > .carbon-row > .carbon-drag-handle { display: none; }
 
@@ -105,6 +103,9 @@
 
 .carbon-groups-holder .carbon-group-actions-tabbed-horizontal .carbon-btn-remove,
 .carbon-groups-holder .carbon-group-actions-tabbed-vertical .carbon-btn-remove { color: $color-darkred-font; }
+
+.layout-tabbed-horizontal > .carbon-groups-holder > .carbon-row > .fields-container,
+.layout-tabbed-vertical > .carbon-groups-holder > .carbon-row > .fields-container { margin-top: 0; }
 
 .carbon-empty-row:not(.carbon-empty-row-visible) ~ .layout-tabbed-horizontal + .carbon-actions,
 .carbon-empty-row:not(.carbon-empty-row-visible) ~ .layout-tabbed-vertical + .carbon-actions { display: none !important; }
